--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
-# ignore Vale generated files
-
+#Node generated files
+node_modules
+package.json
+package-lock.json
+ 
+ # Vale generated files
 styles
+
+# Keep these files
+!website/package.json
