--- a/website/package.json
+++ b/website/package.json
@@ -13,10 +13,10 @@
   },
   "dependencies": {
     "@emotion/cache": "latest",
-    "@emotion/react": "latest",
-    "@emotion/styled": "latest",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "latest",
-    "@mui/material": "latest",
+    "@mui/material": "^7.0.2",
     "@mui/material-nextjs": "latest",
     "next": "^15.0.0",
     "react": "^19.0.0",
