--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -12,12 +12,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install Dependencies
-        working-directory: ./website
+      - name: Install dependencies
         run: npm install
 
-      - name: Build
-        working-directory: ./website
+      - name: Build static site
         run: npm run build
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
