--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Build static site
+        working-directory: ./website
         run: npm run build
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
